# Dar

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  main.sharpmake.cs
D3D12BaseLib/: CMakeLists.txt
D3D12BaseLib/include/: camera_controller.h  d3d12_app.h  d3d12_asset_manager.h  d3d12_async.h  d3d12_camera.h  d3d12_command_list.h  d3d12_command_queue.h  d3d12_defines.h  d3d12_depth_buffer.h  d3d12_descriptor_heap.h  d3d12_geometry.h  d3d12_includes.h  d3d12_input_query.h  d3d12_logger.h  d3d12_math.h  d3d12_pipeline_state.h  d3d12_res_tracker.h  d3d12_resource_handle.h  d3d12_resource_manager.h  d3d12_scene.h  d3d12_timer.h  d3d12_utils.h  d3d12_vertex_index_buffer.h  random.h
D3D12BaseLib/src/: camera_controller.cpp  d3d12_app.cpp  d3d12_asset_manager.cpp  d3d12_camera.cpp  d3d12_command_list.cpp  d3d12_command_queue.cpp  d3d12_depth_buffer.cpp  d3d12_descriptor_heap.cpp  d3d12_logger.cpp  d3d12_pipeline_state.cpp  d3d12_res_tracker.cpp  d3d12_resource_handle.cpp  d3d12_resource_manager.cpp  d3d12_scene.cpp  d3d12_utils.cpp  scene_loader.cpp
DarE/: CMakeLists.txt
DarE/asset_manager/: asset_manager.cpp  asset_manager.h
DarE/async/: async.h  job_system.cpp  job_system.h
DarE/framework/: app.cpp  app.h  camera.cpp  camera.h  input_query.h
DarE/graphics/: renderer.cpp  renderer.h
DarE/graphics/d3d12/: command_list.cpp  command_list.h  command_queue.cpp  command_queue.h  data_buffer.cpp  data_buffer.h  depth_buffer.cpp  depth_buffer.h  descriptor_heap.cpp  descriptor_heap.h  includes.h  pipeline_state.cpp  pipeline_state.h  resource_handle.cpp  resource_handle.h  resource_manager.cpp  resource_manager.h  texture_res.cpp  texture_res.h  vertex_index_buffer.h
DarE/math/: dar_math.h
DarE/utils/: defines.h  logger.cpp  random.h  shader_compiler.cpp  shader_compiler.h  utils.cpp  utils.h
dar/async/: async.h  job_system.cpp  job_system.h
dar/framework/: app.cpp  app.h  camera.cpp  camera.h  input_query.h
dar/graphics/: backbuffer.cpp  backbuffer.h  core.h  device.cpp  device.h  frame_data.cpp  frame_data.h  frame_pipeline.cpp  frame_pipeline.h  render_command_list.cpp  render_command_list.h  render_pass.cpp  render_pass.h  render_target.cpp  render_target.h  renderer.cpp  renderer.h
dar/math/: dar_math.h
dar/utils/: defines.h  logger.h  pooled_vector.h  profile.h  timer.h  utils.cpp  utils.h
examples/sponza/: compile_resources.bat  compile_shaders.bat  compile_textures.bat
include/: command_queue.h  d3d12_app.h  d3d12_hello_triangle.h  d3d12_utils.h  defines.h  geometry.h  run_app.h  win32_app.h
lib/: nvtt.lib  zlibstatic.lib  zlibstaticd.lib
res/shaders/: basic.hlsl  basic_vs.hlsl
reslib/: img_data.cpp  img_data.h  resource_library.cpp  resource_library.h  serde.cpp  serde.h
sample_projects/: CMakeLists.txt
sample_projects/cuda_rasterizer/: CMakeLists.txt  README.md
sample_projects/cuda_rasterizer/include/: cuda_cpu_common.h  cuda_drawable.h  d3d12_cuda_rasterizer.h
sample_projects/cuda_rasterizer/res/gpu/: basic_shader.cu  rasterizer.cu  rasterizer_utils.cu  rasterizer_utils.cuh
sample_projects/cuda_rasterizer/res/shaders/: screen_quad_ps.hlsl  screen_quad_vs.hlsl
sample_projects/cuda_rasterizer/src/: cuda_drawable.cpp  d3d12_cuda_rasterizer.cpp  main.cpp
sample_projects/cuda_rasterizer/test/: CMakeLists.txt
sample_projects/cuda_rasterizer/test/include/: cuda_drawable.h
sample_projects/cuda_rasterizer/test/res/gpu/: basic_shader.cu  common.cuh
sample_projects/cuda_rasterizer/test/src/: cuda_drawable.cpp  main.cpp
sample_projects/hello_triangle/: CMakeLists.txt
sample_projects/hello_triangle/include/: d3d12_hello_triangle.h  defines.h  geometry.h
sample_projects/hello_triangle/lib/: d3d12base.lib
sample_projects/hello_triangle/res/shaders/: basic_ps.hlsl  basic_vs.hlsl
sample_projects/hello_triangle/src/: d3d12_hello_triangle.cpp  main.cpp
sample_projects/shader_toy/: CMakeLists.txt  README.md
sample_projects/shader_toy/include/: shader_toy.h
sample_projects/shader_toy/res/shaders/: belousov_zhabotinsky.hlsl  common.hlsli  render_pass_ps.hlsl  render_pass_vs.hlsl  screen_quad_ps.hlsl
sample_projects/shader_toy/src/: main.cpp  shader_toy.cpp
sample_projects/sponza/: CMakeLists.txt
sample_projects/sponza/include/: animation.h  fps_camera_controller.h  fps_edit_camera_controller.h  geometry.h  scene.h  scene_loader.h  sponza.h
sample_projects/sponza/res/scenes/AnimationTest/: animation.gltf
sample_projects/sponza/res/shaders/: basic_ps.hlsl  basic_vs.hlsl  common.hlsli  deferred_ps.hlsl  deferred_vs.hlsl  forward_ps.hlsl  fxaa.hlsli  gpu_cpu_common.hlsli  lighting_common.hlsli  lighting_ps.hlsl  lighting_vs.hlsl  post_ps.hlsl  post_vs.hlsl  screen_quad_ps.hlsl  screen_quad_vs.hlsl
sample_projects/sponza/src/: fps_camera_controller.cpp  fps_edit_camera_controller.cpp  main.cpp  scene.cpp  scene_loader.cpp  sponza.cpp
sample_projects/textured_cube/: CMakeLists.txt
sample_projects/textured_cube/include/: d3d12_tex_cube.h  fps_camera_controller.h  geometry.h
sample_projects/textured_cube/res/shaders/: basic_ps.hlsl  basic_vs.hlsl
sample_projects/textured_cube/src/: d3d12_tex_cube.cpp  fps_camera_controller.cpp  main.cpp
solution/: dar.sln
solution/dar/: dar.vcxproj  dar.vcxproj.filters
solution/hellotriangle/: hellotriangle.vcxproj  hellotriangle.vcxproj.filters  hellotriangle_runtimedependencies.txt
solution/imgui/: imgui.vcxproj  imgui.vcxproj.filters
solution/mikktspacelib/: mikktspacelib.vcxproj  mikktspacelib.vcxproj.filters
solution/optick/: optick.vcxproj  optick.vcxproj.filters
solution/resourcemanagerlib/: resourcemanagerlib.vcxproj  resourcemanagerlib.vcxproj.filters
solution/shaderplaything/: shaderplaything.vcxproj  shaderplaything.vcxproj.filters  shaderplaything_runtimedependencies.txt
solution/sponza/: sponza.vcxproj  sponza.vcxproj.filters  sponza_runtimedependencies.txt
solution/tools/: toolssolution.sln
src/: asset_manager.cpp  command_queue.cpp  d3d12_app.cpp  d3d12_hello_triangle.cpp  main.cpp  win32_app.cpp
tools/resourcecompiler/: main.cpp
(+76 files in other folders)
